# tchannel_rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Makefile  README.md  README.tpl
.devcontainer/: Dockerfile  devcontainer.json
examples/: basic.rs  client.rs  server.rs
examples-jvm-server/: Dockerfile  docker-compose.yml  pom.xml
examples-jvm-server/src/main/java/tchannel/rs/samples/server/: SyncServer.java
examples-server/: README.md  pom.xml
examples-server/src/main/java/com/uber/tchannel/basic/: AsyncRequest.java  SyncRequest.java
src/: channel.rs  config.rs  defragmentation.rs  errors.rs  fragmentation.rs  handler.rs  lib.rs  server.rs  subchannel.rs
src/connection/: mod.rs  pool.rs
src/frames/: headers.rs  mod.rs  payloads.rs
src/messages/: json.rs  mod.rs  raw.rs  thrift.rs
tchannel/: Cargo.toml  README.md
tchannel-core/: Cargo.toml  Makefile
tchannel-core/src/: channel.rs  codec.rs  connection.rs  error.rs  fragmentation.rs  frame.rs  handlers.rs  lib.rs  transport.rs
tchannel-core/src/channel/: mod.rs
tchannel-core/src/channel/connection/: mod.rs
tchannel-core/src/channel/frames/: headers.rs  mod.rs  payloads.rs
tchannel-core/src/channel/messages/: defragmenting.rs  fragment.rs  fragmenting.rs  mod.rs  raw.rs  thrift.rs
tchannel-core/src/frames/: mod.rs
tchannel-core/src/messages/: mod.rs  raw.rs  serializers.rs  thrift.rs
tchannel-example/: Cargo.toml
tchannel-example/examples/: basic.rs
tchannel-example/server/: pom.xml
tchannel-example/server/src/main/java/com/uber/tchannel/basic/: SyncRequest.java
tchannel-example/server/src/main/resources/: simplelogger.properties
tchannel-example/src/: main.rs
tchannel-examples/: Cargo.toml
tchannel-examples/examples/: basic.rs
tchannel-examples/server/: pom.xml
tchannel/src/: channel.rs  defragmentation.rs  errors.rs  handler.rs  lib.rs
tchannel/src/connection/: mod.rs  pool.rs
tchannel/src/frames/: headers.rs  payloads.rs
tchannel/src/messages/: mod.rs  thrift.rs
tests/: functional.rs  json.rs
