[package]
name = "tchannel_rs"
version = "0.0.1"
edition = "2021"
description = "Network multiplexing and framing RPC protocol"
authors = ["pwalski <pwalski.dev@gmail.com>"]
repository = "https://github.com/pwalski/tchannel-rust"
license = "MIT"
readme = "README.md"
categories = ["network-programming"]
keywords = ["rpc", "protcol", "networking"]
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md"
]

[dependencies]
getset = "0.1.2"
derive_builder = "0.11.1"
thrift = { version = "0.15.0", optional = true }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "net"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tokio-stream = { version = "0.1.8", features = ["tokio-util"] }
tokio-macros = "1.7.0"
bb8 = "0.8.0"
bytes = "1.1.0"
atoi = "1.0.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
async-trait = "0.1.53"
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"
bitflags = "1.3.2"
futures = { version = "0.3.21", features = ["std"] }
log = "0.4.16"
derive-new = "0.5.9"

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1.17.0", features = ["macros", "test-util"] }
test-case = "2.0.2"
serial_test = "0.6.0"
env_logger = "0.9.0"
anyhow = "1.0.56"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
include-thrift = ["thrift"]
