[package]
name = "tchannel_rs"
version = "0.0.1"
edition = "2021"
description = "Network multiplexing and framing RPC protocol"
authors = ["pwalski <pwalski.dev@gmail.com>"]
repository = "https://github.com/pwalski/tchannel-rust"
license = "MIT"
readme = "README.md"
categories = ["network-programming"]
keywords = ["rpc", "protcol", "networking"]
include = ["**/*.rs", "/Cargo.toml", "/LICENSE.md", "/README.md"]

[dependencies]
async-trait = "0.1"
atoi = "1.0"
bb8 = "0.8"
bitflags = "1.3"
bytes = "1.1"
derive-new = "0.5"
derive_builder = "0.11"
futures = { version = "0.3", features = ["std"] }
getset = "0.1"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde_json = { version = "1.0", optional = true }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
thrift_proto = { version = "0.15", package = "thrift", optional = true }
tokio = { version = "1.17", features = ["rt-multi-thread", "net"] }
tokio-macros = "1.7"
tokio-stream = { version = "0.1", features = ["tokio-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.9"
serial_test = "0.6"
test-case = "2.0"
tokio = { version = "1.17", features = ["macros", "test-util"] }
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
thrift = ["dep:thrift_proto"]
json = ["dep:serde_json"]
