[package]
name = "tchannel"
version = "0.1.0"
authors = ["Przemysław Walski <pwalski@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.13.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.0.1"
atoi = "0.4.0"
