[package]
name = "tchannel"
version = "0.1.0"
authors = ["Przemysław Walski <pwalski@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1"
derive_builder = "0.9"
num-derive = "0.3"
thrift = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
bb8 = "0.7.0"
bytes = "1.0"
atoi = "0.4"
num = "0.3"
num-traits = "0.2"
async-trait = "0.1"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0.24"
bitflags = "1.0"
