[package]
name = "tchannel-example"
version = "0.1.0"
authors = ["Przemysław Walski <pwalski@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tchannel = { path = "../tchannel-core" }
tokio = { version = "1", features = ["full"] }