[package]
name = "tchannel-example"
version = "0.1.0"
authors = ["Przemysław Walski <pwalski@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tchannel = { path = "../tchannel-core" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3", features = ["thread-pool"]}
bytes = "1.0"
log = "0.4"
env_logger = "0.8.3"
